--- a/templates/dashboard/adminindex.html
+++ b/templates/dashboard/adminindex.html
@@ -205,12 +205,12 @@
 			<div class="row-fluid">
 
 
-				<a class="quick-button metro red span2" href="{% url 'generate-report' %}?type=daily">
+				<a class="quick-button metro red span2" href="{{ report.daily_report.url }}" target="_blank">
 					<i class="icon-comments-alt"></i>
 					<p>Daily Report</p>
 					<span class="badge"></span>
 				</a>
-				<a class="quick-button metro blue span2" href="{% url 'generate-report' %}?type=monthly">
+				<a class="quick-button metro blue span2" href="{{ report.monthly_report.url }}" target="_blank">
 					<i class="icon-shopping-cart"></i>
 					<p>Monthly Report</p>
 					<span class="badge"></span>
