--- a/templates/dashboard/edit-plan.html
+++ b/templates/dashboard/edit-plan.html
@@ -70,6 +70,12 @@
 								  </label>
 								</div>
 							  </div>
+                                <div class="control-group">
+								<label class="control-label" for="focusedInput">Price</label>
+								<div class="controls">
+								  {{ form.price }}<span style="color: red">{{ form.price.errors.as_text }}</span>
+								</div>
+							  </div>
                             <div class="control-group">
 								<label class="control-label" for="optionsCheckbox2">Free Plan</label>
 								<div class="controls">
