--- a/templates/accounts/change-plan.html
+++ b/templates/accounts/change-plan.html
@@ -25,7 +25,7 @@
                       <li>Post requirement<span class="label label-success pull-right">{{ plan.post_requirement }}</span></li>
                       <li>View contact <span class="label label-success pull-right">{{ plan.view_contact }}  Posting</span></li>
                       <li>Show Interest<span class="label label-success pull-right">{{ plan.show_interest }}  Posting</span></li>
-
+                        <li>Price<span class="label label-success pull-right">{{ plan.price }} $  </span></li>
                     </ul>
                     <div class="pricing-footer pricing-head">
                       <p>
